# snapperable

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  RELEASING.md  batch_processor.py  checkpoint_manager.py  demo_dynamic_iterables.py  pyproject.toml  snapperable.py  test_snapperable.py
.github/workflows/: python-package.yml  release.yml
demo/: demo_dynamic_iterables.py
src/snapperable/: __init__.py  batch_processor.py  batch_storage_worker.py  function_hasher.py  item_error_handler.py  logger.py  processing_metrics.py  snapper.py  snapperable.py  snapshot_storage.py  snapshot_tracker.py
src/snapperable/storage/: __init__.py  pickle_storage.py  snapshot_storage.py  sqlite_storage.py
tests/: test_background_threading.py  test_batch_processor.py  test_dynamic_iterables.py  test_exception_handling.py  test_item_error_handler.py  test_processing_metrics.py  test_snapperable.py  test_snapshot_storage.py  test_snapshot_tracker.py
