[project]
name = "snapperable"
version = "0.1.0"
description = "A Python library for robust processing of long-running iterables with automatic checkpointing."
authors = [
    { name = "Martijn Vanbiervliet" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
